# hpfracc

./: .gitignore  =0.13.0  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  METHODS_DESCRIPTION_HPFRACC.md  PYPI_RELEASE_NOTES_v3.0.2.md  README.md  RELEASE_SUMMARY_v3.0.2.md  RELEASE_WRITEUP_v3.0.2.md  RESEARCH_USAGE.md  UPDATED_FOCUS_AREAS_REPORT.md  coverage.json  debug_jax_import.py  debug_test.py  gpu_test_output.txt  mkdocs.yml  model_checkpoint.pth  pyproject.toml  pytest.ini  requirements.txt  special_detailed.txt  special_failures.txt  test_dimension_mismatch.py  test_failures.txt  test_fix_verification.py  test_gnn_gpu_probabilistic_comprehensive.py  test_special_results.txt  v0.1_engineering_contract.md  verify_matrix_diffusion.py
.github/workflows/: ci.yml  pypi-publish.yml  tests.yml
archive/: reproduce_issue.py
benchmarks/numerical/: README.md  baseline.py  convergence.py  gradient_checks.py  history_comparison.py  operator_scaling.py  stability.py  validation_summary.py
docs/: api_reference.rst  conf.py  index.md  index.rst  sde_examples.rst
hpfracc/: __init__.py  jax_gpu_setup.py
models/: model_checkpoint.pth  registry.db
reports/: COMPREHENSIVE_CODEBASE_STATUS_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  TESTING_COVERAGE_STATUS_REPORT.md  UPDATED_FOCUS_AREAS_REPORT.md
scripts/: comprehensive_benchmark_results.json  run_all_wsl.sh  run_local_wsl.sh  run_tests_wsl.sh  setup_jax.sh
tests/: conftest.py  test_all_examples.py  test_dimension_mismatch.py  test_fix_verification.py  test_gnn_gpu_probabilistic_debug.py  test_jax_gpu_setup_safe.py  test_neural_fsde_debug.py  test_probabilistic_gradients.py
(+271 files in other folders)
