[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hpfracc"
version = "0.1.0a0"
description = "High-performance fractional calculus for differentiable scientific computing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "HPFRACC contributors" }
]
keywords = [
  "fractional-calculus",
  "jax",
  "scientific-computing",
  "differentiable-programming",
  "dynamical-systems"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "jax>=0.4.30"
]

[project.optional-dependencies]
test = [
  "hypothesis>=6.100",
  "mpmath>=1.3",
  "pytest>=8.0",
  "scipy>=1.12"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5"
]
dev = [
  "hypothesis>=6.100",
  "mpmath>=1.3",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pytest>=8.0",
  "scipy>=1.12"
]

[project.urls]
Homepage = "https://github.com/hpfracc/hpfracc"
Issues = "https://github.com/hpfracc/hpfracc/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hpfracc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
